AUT-1272 Ory Hydra v2: OAuth2 errors can no longer be returned in the legacy error format
